<resources>
    <string name="app_name">Kalukulator</string>
    <string name="percent">%</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="EqualTo">=</string>
    <string name="kali">x</string>
    <string name="result">0</string>
    <string name="aritmatika">X</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="mines">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="c">C</string>
</resources>