<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/c"
        android:textSize="28sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnZero"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/zero"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnDot"
        app:layout_constraintLeft_toRightOf="@id/btnC"
        />
    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/dot"
        android:textSize="28sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnEqual"
        app:layout_constraintLeft_toRightOf="@id/btnZero"
        />
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/EqualTo"
        android:textSize="28sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnDot"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/one"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnC"
        app:layout_constraintRight_toLeftOf="@id/btnTwo"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/two"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintRight_toLeftOf="@id/btnThree"
        app:layout_constraintLeft_toRightOf="@id/btnOne"
        />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/three"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnDot"
        app:layout_constraintRight_toLeftOf="@id/btnPlus"
        app:layout_constraintLeft_toRightOf="@id/btnTwo"
        />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/plus"
        android:textSize="28sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btnEqual"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnThree"
        />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/four"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintRight_toLeftOf="@id/btnFive"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/five"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintRight_toLeftOf="@id/btnSix"
        app:layout_constraintLeft_toRightOf="@id/btnFour"
        />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/six"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnThree"
        app:layout_constraintRight_toLeftOf="@id/btnMines"
        app:layout_constraintLeft_toRightOf="@id/btnFive"
        />

    <Button
        android:id="@+id/btnMines"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/mines"
        android:textSize="28sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btnPlus"
        app:layout_constraintLeft_toRightOf="@id/btnSix"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/seven"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintRight_toLeftOf="@id/btnEight"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/eight"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintRight_toLeftOf="@id/btnNine"
        app:layout_constraintLeft_toRightOf="@id/btnSeven"
        />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/nine"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintRight_toLeftOf="@id/btnMultiplied"
        app:layout_constraintLeft_toRightOf="@id/btnEight"
        />

    <Button
        android:id="@+id/btnMultiplied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:text="@string/kali"
        android:textSize="28sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btnMines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnNine"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="85sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/previewAritmatika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>